Fixed error on mobile and redeployed

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -38,7 +38,7 @@
 }
 
 @media (max-width: 700px) {
-  .searchButtonDiv .watchListButtonDiv {
+  .watchListButtonDiv {
     display: none;
   }
 
